# panel-protocol

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  rustfmt.yml  test.yml
examples/: cli.rs  iced-gui.rs
examples/gui/: app.rs  main.rs  panel.rs
src/: lib.rs
