[package]
name = "panel-protocol"
version = "0.7.0"
authors = ["Jake McGinty <me@jake.su>", "Brian Schwind <brianmschwind@gmail.com>"]
license = "MIT"
edition = "2018"

[features]
default = []
std = []
# This feature implements serde::{Serialize, Deserialize} for Command and Report structs.
serde_support = ["serde", "std"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
serde = { version = "1.0", optional = true }

[[example]]
name = "cli"
required-features = ["serde_support"]

[dev-dependencies]
serial-core = "0.4"
serial-unix = "0.4"
failure = "0.1"
ron = "0.6"
eframe = "0.13"
anyhow = "1.0"
